<resources>
    <string name="app_name">Volt Sense</string>
    <string name="login_text">Log in</string>
    <string name="signup_text">Sign up</string>
    <string name="password_text">Password</string>
    <string name="enter_confirmation_code_text">Please enter the confirmation code sent to your email</string>
    <string name="default_error_text">An error has occurred</string>
    <string name="default_success_text">Success</string>
    <string name="new_password_text">New Password</string>
    <string name="forgot_password_text">Forgot?</string>
    <string name="edit_message">Enter a message</string>
    <string name="scan_button">Scan Again</string>
    <string name="connect_button">Connect</string>
    <string name="menu_title">Options</string>
    <string name="update_rate">Set Update Rate</string>
    <string name="device_id">View Device ID</string>
    <string name="rename">Rename</string>
    <string name="disconnect">Disconnect</string>
    <string name="alarm_threshold_button">Set alarm threshold</string>
    <string name="voltage_events_button">View voltage events</string>
    <string name="alert_threshold_dialog_message">Enter an alert threshold</string>
    <string name="dialog_accept_button_message">Ok</string>
    <string name="dialog_cancel_button_message">Cancel</string>
    <string name="voltage_event_dialog_message">Voltage Event Log</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="connected_device_message">Connected to: %1$s</string>
    <string name="voltage_sensor_status">Status: %1$s</string>
    <string name="battery_level">Battery Level: %1$d%%</string>
    <string name="temperature">Temperature: %1$s °C</string>
    <string name="humidity">Humidity: %1$s%%</string>
    <string name="pressure">Pressure: %1$s mb</string>
    <string name="VOC">Total VOC: %1$s ppm</string>
    <string name="CO2">Equiv CO2: %1$s ppm</string>
    <string name="spo2">SpO2 Sensor: %1$s</string>
    <string name="voltage_level">Voltage level: %1$d</string>
    <string name="active_gas_sensor">Active Gas Sensor: %1$s</string>
    <string name="gas_sensor_data">Gas Sensor Data: %1$s</string>
    <string name="alarm_threshold">Alarm threshold: %1$d</string>
    <string name="update_rate_value">Update Rate: %1$d</string>
    <string name="frequency_value">Frequency: %1$d</string>
    <string name="num_sensors_value">Number of Sensors: %1$d</string>
    <string name="auto_sample_off_message">Auto Sampling: OFF</string>
    <string name="title_activity_developer_mode">DeveloperModeActivity</string>
    <string name="show_real_time_data_button">View real time data</string>
    <string name="normal_mode_menu_item">Normal mode</string>
    <string name="dev_mode_menu_item">Dev mode</string>
    <string name="title_activity_real_time_data_selection">RealTimeDataSelectionActivity</string>
    <string name="voltage_sensor_button">Voltage Sensor</string>
    <string name="gas_sensor_button">Gas Sensor</string>
    <string name="acceleration_sensor_button">Acceleration Sensor</string>
    <string name="spo2_sensor_button">SpO2 Sensor</string>
    <string name="temp_humidity_sensor_button">Temp/Humidity Sensor</string>
    <string name="VOC_sensor_button">VOC Sensor</string>
    <string name="title_activity_voltage_sensor_graphs">VoltageSensorGraphsActivity</string>
    <string name="title_activity_acceleration_sensor_graphs">AccelerationSensorGraphs</string>
    <string name="title_activity_sp_o2_sensor_graphs">SpO2SensorGraphs</string>
    <string name="title_activity_temp_humidity_sensor_graph">TempHumiditySensorGraph</string>
    <string name="title_activity_voc_graphs">VocGraphs</string>
    <string name="show_device_id">Device ID: %1$s</string>
    <string name="rename_device_modal_message">Rename Bluetooth Device</string>
    <string name="voltage_channel_one_graph_title">Channel 1</string>
    <string name="voltage_channel_two_graph_title">Channel 2</string>
    <string name="voltage_channel_three_graph_title">Channel 3</string>
    <string name="voltage_channel_graph_x_axis_label">Frequency (Hz)</string>
    <string name="voltage_channel_graph_y_axis_label">Magnitude</string>
    <string name="acceleration_x_graph_title">X</string>
    <string name="acceleration_y_graph_title">Y</string>
    <string name="acceleration_z_graph_title">Z</string>
    <string name="acceleration_graph_x_axis_label">Time</string>
    <string name="acceleration_graph_y_axis_label">Value</string>
    <string name="spo2_red_graph_title">Red</string>
    <string name="spo2_ir_graph_title">IR</string>
    <string name="spo2_green_graph_title">Green</string>
    <string name="spo2_graph_x_axis_label">x-axis</string>
    <string name="spo2_graph_y_axis_label">y-axis</string>
    <string name="temperature_graph_title">Temperature</string>
    <string name="humidity_graph_title">Humidity</string>
    <string name="temperature_graph_x_axis_label">Time</string>
    <string name="temperature_graph_y_axis_label">Temp</string>
    <string name="humidity_graph_x_axis_label">Time</string>
    <string name="humidity_graph_y_axis_label">Humidity</string>
    <string name="pressure_graph_title">Pressure</string>
    <string name="pressure_graph_x_axis_label">Time</string>
    <string name="pressure_graph_y_axis_label">Pressure</string>
    <string name="logout_button">Logout</string>
    <string name="change_user">Change User</string>
    <string name="clear_db_button">Clear DB</string>
    <string name="proxTrue">Proximity: Detected</string>
    <string name="proxFalse">Proximity: Not Detected</string>

</resources>
