<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.AuthenticatorActivity">

    <include layout="@layout/content_authenticator" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:src="@mipmap/ge_logo_hd_foreground"/>
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageLogo"
        android:padding="20dp"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textNoSuggestions|textVisiblePassword"/>
    <RelativeLayout
        android:id="@+id/layoutPassword"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUsername"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/forgot_password_text"/>
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layoutPassword"
        android:layout_marginTop="15dp"
        android:background="#005ac8"
        android:textColor="@android:color/white"
        android:ems="10"
        android:text="@string/login_text"/>
    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text="@string/signup_text"/>

</RelativeLayout>
